--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -8,10 +8,7 @@
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Schedule Your Appointment</p>
-  
-                  
-                    
-                        <form [formGroup]="appointmentForm" (ngSubmit)="onSubmitAppointment()">
+                  <form [formGroup]="appointmentForm" (ngSubmit)="onSubmitAppointment()">
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
@@ -50,9 +47,18 @@
                              <select name="dept" class="form-control" id="dept" formControlName="dept" ngModel name="dept">
                               <option value="Cardiology">Cardiology</option>
                               <option value="Radiology">Radiology</option>
-                              <option value="Neurology">Neurology</option>
-                              <option value="Gyne">Gyne</option>
-                              <option value="Orthopaedric">Orthopaedric</option>
+                            </select>
+                          </div>
+                        </div>
+
+                        <!-- !-- For Doctor Dropdown --> 
+                    <div class="d-flex flex-row align-items-center mb-4">
+                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                        <div class="form-outline flex-fill mb-0">
+                            <label for="doc" class="form-label">Doctor:</label><br>
+                             <select name="doc" class="form-control" id="doc" formControlName="doc" ngModel name="doc">
+                              <option value="Dr.John">Dr.John</option>
+                              <option value="Dr.Jenny">Dr.Jenny</option>
                             </select>
                           </div>
                         </div>
