--- a/src/app/components/check-appoitment/check-appoitment.component.html
+++ b/src/app/components/check-appoitment/check-appoitment.component.html
@@ -1,11 +1,27 @@
+
+
+<div class="row d-flex justify-content-center align-items-center h-10">
+<div class="d-flex flex-row align-items-center mb-4">
+<i class="fas fa-user fa-lg me-3 fa-fw"></i>
+<div class="form-outline flex-fill mb-0">
+<input type="text" class="form-control"/><br>
+<button class="btn btn-success me-2" (click)="onClick()">Check</button>
+<button class="btn btn-success" (click)="onNewBooking()">New Appointment</button>
+</div>
+</div>
+</div>
+
+
+
 <div ag-grid="gridOptions" class="ag-theme-bootstrap">  
-    <div class="container-fluid" >
-<ag-grid-angular
+  <div class="container-fluid" *ngIf="hideTable">
+  <ag-grid-angular
    style="width: 100%; height: 400px"
    class="ag-theme-alpine"
    [columnDefs]="columns"
    [defaultColDef]="defaultColDef"
    [rowData]="rowData"
+   (gridReady)="onGridReady($event)"
  ></ag-grid-angular>
  </div>
  </div>
