--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,110 +1,330 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
-                        <hr class="divider" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-                    </div>
-                </div>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <!-- <link href='src/app/css/bootstrap.min.css' rel="stylesheet">
+  <link href="src/app/css/style.css" rel="stylesheet">-->
+  <!-- <link href="../../css/bootstrap-icons.css" rel="stylesheet" type="text/css">  -->
+
+  <title>Hello, world!</title>
+</head>
+<body>
+
+  <!-- <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand fw-bold" href="#">
+              Medi<span class="text-primary">Cure</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link" routerLinkActive="active" href="/home">Home </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link"  href="/signup">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/appointment">Book Appointment</a>
+                    </li>
+            
+                    <li class="nav-item">
+                      <a class="nav-link" href="/appointment-check">My Appointments</a>
+                    </li>
+              </ul>
+
             </div>
-        </header>
-       
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">At Your Service</h2>
-                <hr class="divider" />
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
-                    </div>
-                </div>
+
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header> -->
+
+  <!-- Banner Section -->
+  <section class="position-relative banner-sec"> 
+    <img src="../../../assets/img/banner.png" class="w-100">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-md-6">
+          <div class="banner-content py-md-0 py-5">
+            <h1 class="fw-normal"><span class="fw-bold text-primary">Your doctor</span>, <br />your treatment</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <button type="button" class="btn btn-primary">Explore More</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- three points -->
+  <section class="services-sec py-5">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-4">
+          <div class="d-flex gap-1">
+            <div class="flex-shrink-0">
+              <i class="bi bi-hospital fs-2 text-primary"></i>
             </div>
-        </section>
-       
-        
-        
-        <!-- Footer-->
-        <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2022 - Company Name</div></div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- SimpleLightbox plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+            <div class="flex-grow-1 ms-3">
+              <h5>Emergency Care</h5>
+              <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui o</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="d-flex gap-1">
+            <div class="flex-shrink-0">
+              <i class="bi bi-heart-pulse fs-2 text-primary"></i>
+            </div>
+            <div class="flex-grow-1 ms-3">
+              <h5>Qualified Doctors</h5>
+              <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui o</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="d-flex gap-1">
+            <div class="flex-shrink-0">
+              <i class="bi bi-stopwatch fs-2 text-primary"></i>
+            </div>
+            <div class="flex-grow-1 ms-3">
+              <h5>24/7 Hour Service</h5>
+              <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui o</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- About Us sec -->
+  <section class="about-sec bg-light py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../../../assets/img/doctor-nurses.png" alt="image" class="img-fluid">
+        </div>
+        <div class="col-md-6">
+          <small class="text-uppercase text-primary">About Medicure</small>
+          <h2>Regular check-ups for patients</h2>
+
+          <p class="my-4">Dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
+
+          <div class="d-flex gap-1">
+            <div class="flex-shrink-0">
+              <i class="bi bi-bandaid fs-2 text-primary"></i>
+            </div>
+            <div class="flex-grow-1 ms-3">
+              <h5>Effective Treatment</h5>
+              <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui o</p>
+            </div>
+          </div>
+
+
+          <div class="d-flex gap-1 mt-2">
+            <div class="flex-shrink-0">
+              <i class="bi bi-building-fill-add fs-2 text-primary"></i>
+            </div>
+            <div class="flex-grow-1 ms-3">
+              <h5>Complex Approch</h5>
+              <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui o</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Department Section -->
+  <section class="department-sec py-5">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-12">
+          <h2 class="text-center mb-4 fw-bold">Our Departments</h2>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/cardiology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Cardiology</h5>
+            <p>Cardiology is the medical speciality dealing with 
+                the diagnosis and treatment of diseases and disorders of the heart.
+                 Also treated are abnormal heart rhythms, heart failure,
+                  high blood pressure and some rarer conditions.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/dermatology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Dermatology</h5>
+            <p>Dermatology is the branch of medicine dealing with the skin.  
+                A dermatologist is a specialist medical 
+                doctor who manages diseases related to skin, hair, nails, and 
+                some cosmetic problems.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/neorology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Neurology</h5>
+            <p>Neurology is a branch of medical science that focuses on the brain
+                 and its different aspects. It focuses on treating conditions that affect
+                 the nervous system and diagnoses ailments that affect the brain.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-0 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/psychology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Psychology</h5>
+            <p>The department ensures its significant role in providing comprehensive
+                 treatment to psychiatric patients and in patients of other 
+                 departments on referrals</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-0 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/urology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Urology</h5>
+            <p>Urology is the field of medicine that is associated with the diseases and 
+                disorders of the male and female urinary tract. Urologists are 
+                who specialize in the treatment of conditions affecting the 
+                urinary system.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/oncology.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Oncology</h5>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa quae ab illo inventore veritatis et.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Doctors Section -->
+  <section class="doctors-sec py-5">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-12">
+          <h2 class="text-center mb-4 fw-bold"> Proffessional Teams</h2>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/doctors1.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Ms.Jenny</h5>
+            <p>Cardiology is the medical speciality dealing with 
+                the diagnosis and treatment of diseases and disorders of the heart.
+                 Also treated are abnormal heart rhythms, heart failure,
+                  high blood pressure and some rarer conditions.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/doctors2.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Mr.John</h5>
+            <p>Dermatology is the branch of medicine dealing with the skin.  
+                A dermatologist is a specialist medical 
+                doctor who manages diseases related to skin, hair, nails, and 
+                some cosmetic problems.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-12 mb-md-4 mb-3">
+          <div class="image-box bg-white shadow-lg p-3 rounded-3">
+            <img src="../../../assets/img/doctors3.png" class="img-fluid">
+            <h5 class="mt-3 fw-bold">Ms. Kelly</h5>
+            <p>Neurology is a branch of medical science that focuses on the brain
+                 and its different aspects. It focuses on treating conditions that affect
+                 the nervous system and diagnoses ailments that affect the brain.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+  <!-- Footer -->
+  <footer class="bg-dark py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="text-white fw-bold display-5">We develop & <br /><span class="text-primary">create quality care</span></h2>
+        </div>
+
+        <div class="col-md-3 text-white">
+          <h5 class="mb-3"><i class="bi bi-geo-alt-fill me-2 text-white"></i>Address</h5>
+
+          <p>Germany — 785 15h Street, Office 478 Berlin, De 81566</p>
+
+          <ul class="list-unstyled list-inline mt-4 d-flex gap-2">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="bi bi-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="bi bi-instagram"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="bi bi-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-md-3 text-white">
+          <h5 class="mb-3"><i class="bi bi-envelope me-2 text-white"></i>Contact</h5>
+
+          <a href="mailto:info@email.com">info@email.com</a>
+
+          <h5 class="mt-4">+1 840 841 25 69</h5>
+
+        </div>
+
+      </div>
+    </div>
+  </footer>
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="src/app/js/bootstrap.min.js"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+
+</body>
 </html>
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
- 
