--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,26 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/home">Home </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" href="/signup">Signup</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/appointment">Book Appointment</a>
-        </li>
+<header>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand fw-bold" href="#">
+              Medi<span class="text-primary">Cure</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link px-md-3" routerLinkActive="active" href="/home">Home </a>
+                    </li>
+                    
+                    <li class="nav-item">
+                      <a class="nav-link px-md-3" href="/appointment">Book Appointment</a>
+                    </li>
+            
+                    <li class="nav-item">
+                      <a class="nav-link px-md-3" href="/appointment-check">My Appointments</a>
+                    </li>
+                    <li class="nav-item login-signup position-relative ps-md-2 ms-md-2">
+                        <a class="nav-link px-md-3" href="/login">Login</a>
+                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-md-3"  href="/signup">Signup</a>
+                    </li>
+                     
+              </ul>
 
-        <li class="nav-item">
-          <a class="nav-link" href="/appointment-check">My Appointments</a>
-        </li>
-      </ul>
+            </div>
+
+          </nav>
+        </div>
+      </div>
     </div>
-  </nav>
+  </header>
