--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -53,9 +53,8 @@
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                             <label for="dept" class="form-label">Department:</label><br>
-                             <select name="dept" class="form-control" id="dept" formControlName="dept" name="dept">
-                              <option>Choose Department</option>
-                              <option *ngFor = "let dept of department">{{dept.dept_name}}</option>
+                             <select select class="custom-select mb-3" name="dept" class="form-control" id="dept" formControlName="dept" name="dept">
+                              <option *ngFor = "let dept of department" value="{{dept.id}}">{{dept.dept_name}}</option>
                               
                             </select>
                           </div>
@@ -66,7 +65,7 @@
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                             <label for="doc" class="form-label">Doctor:</label><br>
-                             <select placeHolderName="Doctors" name="doc" class="form-control" id="doc" formControlName="doc" name="doc">
+                             <select class="custom-select mb-3" placeHolderName="Doctors" name="doc" class="form-control" id="doc" formControlName="doc" name="doc">
                               <option>Choose Doctor</option>
                               <option *ngFor ="let doc of doctors">{{doc.doc_name}}</option>
                             </select>
