--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -65,9 +65,10 @@
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                             <label for="doc" class="form-label">Doctor:</label><br>
-                             <select class="custom-select mb-3" placeHolderName="Doctors" name="doc" class="form-control" id="doc" formControlName="doc" name="doc">
+                             <select class="custom-select mb-3"  placeHolderName="Doctors" name="doc" class="form-control" id="doc" formControlName="doc" name="doc">
                               <option>Choose Doctor</option>
                               <option *ngFor ="let doc of doctors">{{doc.doc_name}}</option>
+                              <!-- //(change)="changeState($event.target.value)" -->
                             </select>
                           </div>
                         </div>
