--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -53,9 +53,8 @@
                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
                             <label for="dept" class="form-label">Department:</label><br>
-                             <select select class="custom-select mb-3" name="dept" class="form-control" id="dept" formControlName="dept" name="dept">
-                              <option *ngFor = "let dept of department" value="{{dept.id}}">{{dept.dept_name}}</option>
-                              
+                             <select select class="custom-select mb-3" (change)="changeDept($event)" name="dept" class="form-control" id="dept" formControlName="dept" name="dept">
+                              <option *ngFor = "let dept of department" value="{{dept.id}}" >{{dept.dept_name}}</option>
                             </select>
                           </div>
                         </div>
@@ -68,7 +67,6 @@
                              <select class="custom-select mb-3"  placeHolderName="Doctors" name="doc" class="form-control" id="doc" formControlName="doc" name="doc">
                               <option>Choose Doctor</option>
                               <option *ngFor ="let doc of doctors">{{doc.doc_name}}</option>
-                              <!-- //(change)="changeState($event.target.value)" -->
                             </select>
                           </div>
                         </div>
