--- a/src/app/components/lab-tests/lab-tests.component.html
+++ b/src/app/components/lab-tests/lab-tests.component.html
@@ -34,9 +34,9 @@
                       <div class="containter">
                         <div class="form-check form-check-inline" *ngFor="let test of testList">
                           <label>
-                            <input class="form-check-input" type="radio"  value="{{test.test_id}}" 
-                              (change)="changeDiagnosis($event)" > 
-                            <img src="{{test.test_img}}" alt="Option 1">{{test.test_name}}
+                            <input class="form-check-input" type="radio" 
+                              (change)="changeDiagnosis()" formControlName="testName" [value]="test.test_id"> 
+                            <img [src]="test.test_img" alt="Option 1">{{test.test_name}}
                           </label>
                         </div>
                       </div>
@@ -50,8 +50,7 @@
                       <label for="testService" class="form-label">Test Services</label><br>
                       <select class="select" class="form-control" id="testService" (change)="changeService($event)"
                         formControlName="testService" name="testService">
-                        <option>Choose Service</option>
-                        <option *ngFor="let service of serviceList" value="{{service.service_id}}">
+                        <option *ngFor="let service of serviceList" [value]="service.service_id">
                           {{service.service_name}}</option>
                       </select>
                     </div>
@@ -66,7 +65,7 @@
                         <!-- (change)="onCheckboxChange($event)"  -->
                         <div class="check" *ngFor="let sub of subServiceList">
                           <input class="form-check-input"type="checkbox" formControlName="subService"
-                          value="{{sub.subService_id}}" id="flexCheckChecked">
+                           id="flexCheckChecked" [value]="sub.subService_id" (change)="onCheckChange($event)">
                           <label class="form-check-label" for="flexCheckChecked">
                             {{sub.subService_name}}
                             <!-- [checked]="{{sub.select}}"  -->
